Add new url to manifest, google search logic to google.js, add new input to popup.html and file search logic to popup.js

--- a/employed/popup/popup.html
+++ b/employed/popup/popup.html
@@ -13,26 +13,29 @@
   <div>
     <h2>employed</h2>
     <form id="search-form">
+      <span id="display">
+        <!-- <label for="search-job">job</label> -->
+        <input type="text" id="search-job" placeholder="Job...">
+        <br>
 
-      <!-- <label for="search-job">job</label> -->
-      <input type="text" id="search-job" placeholder="Job...">
-      <br>
+        <!-- <label for="search-location">location</label> -->
+        <input type="text" id="search-location" placeholder="Location...">
+        <br>
 
-      <!-- <label for="search-location">location</label> -->
-      <input type="text" id="search-location" placeholder="Location...">
-      <br>
+        <!-- <label for="search-exclution">exclution</label> -->
+        <input type="text" id="search-exclution" placeholder="Exclution...">
+        <br>
+      </span>
 
-      <!-- <label for="search-exclution">exclution</label> -->
-      <input type="text" id="search-exclution" placeholder="Exclution...">
-      <br>
+      <!-- <label for="file">file</label> -->
+      <input type="text" id="search-file" placeholder="File">
       <br>
 
       <!-- <label for="date">date</label> -->
-      <input type="date" id="date" name="date">
-      <br>
+      <input type="date" id="date" name="date" placeholder="Date">
       <br>
 
-      <input type="submit" value="Apply">
+      <input type="submit" id="apply" value="Apply">
 
     </form>
   </div>
