--- a/employed/popup/popup.html
+++ b/employed/popup/popup.html
@@ -28,7 +28,7 @@
       </span>
 
       <!-- <label for="file">file</label> -->
-      <input type="text" id="search-file" placeholder="File">
+      <input type="text" id="search-file" placeholder="Book / File...">
       <br>
 
       <!-- <label for="date">date</label> -->
