--- a/employed/popup/popup.html
+++ b/employed/popup/popup.html
@@ -22,8 +22,8 @@
         <input type="text" id="search-location" placeholder="Location...">
         <br>
 
-        <!-- <label for="search-exclution">exclution</label> -->
-        <input type="text" id="search-exclution" placeholder="Exclution...">
+        <!-- <label for="search-exclusion">exclusion</label> -->
+        <input type="text" id="search-exclusion" placeholder="exclusion...">
         <br>
       </span>
 
