add logo and change design

--- a/employed/popup/popup.html
+++ b/employed/popup/popup.html
@@ -9,9 +9,13 @@
   <script src="popup.js"></script>
 </head>
 
+
 <body>
-  <div>
-    <h2>employed</h2>
+  <div id="canvas">
+    <div id="logo">
+      <img src="images/dork_06.png" alt="dork" width="50">
+      <h3>DORK</h3>
+    </div>
     <form id="search-form">
       <span id="display">
         <!-- <label for="search-job">job</label> -->
