Drastic alteration to UI

--- a/employed/popup/popup.html
+++ b/employed/popup/popup.html
@@ -13,8 +13,8 @@
 <body>
   <div id="canvas">
     <div id="logo">
-      <img src="images/dork_06.png" alt="dork" width="50">
-      <h3>DORK</h3>
+      <h3>JOB DORK</h3>
+      <img src="images/dork_00.png" alt="dork" width="50">
     </div>
     <form id="search-form">
       <span id="display">
@@ -39,7 +39,7 @@
       <input type="date" id="date" name="date" placeholder="Date">
       <br>
 
-      <input type="submit" id="apply" value="Apply">
+      <input type="submit" id="apply" value="APPLY">
 
     </form>
   </div>
